--- a/loginpage/src/App.css
+++ b/loginpage/src/App.css
@@ -14,7 +14,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: aqua;
+  background-color:darksalmon;
   
 }
 .div1{
